crates/server/tests/snapshots/replay__search_bad_type.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown search type: bogus"
    }
  },
  "status": 400
}
