crates/server/tests/snapshots/replay__series_detail_random.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "version_id": "ev1"
  },
  "status": 200
}
