crates/server/tests/snapshots/replay__series_episode_detail.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "added_at": "2023-11-14T22:13:24Z",
    "air_date": "2023-11-14T22:13:23Z",
    "id": "[id]",
    "number": 1,
    "overview": null,
    "runtime_minutes": 42,
    "season_id": "se1",
    "title": "Alpha e1"
  },
  "status": 200
}
