crates/server/tests/snapshots/replay__series_list.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "added_at": "2023-11-14T22:13:22Z",
        "artwork": {
          "backdrops": [
            {
              "base": "/images/s1-backdrop",
              "widths": [
                480,
                960
              ]
            }
          ],
          "posters": [
            {
              "base": "/images/s1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          ]
        },
        "content_rating": {
          "code": "TV-14",
          "system": "TV"
        },
        "id": "s1",
        "manually_edited": false,
        "overview": null,
        "season_count": 1,
        "title": "Alpha s1",
        "updated_at": "2023-11-14T22:13:22Z",
        "year": 2019
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
