crates/server/tests/snapshots/replay__series_relink_existing_target.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "a series can only be relinked to a provider id"
    }
  },
  "status": 400
}
