crates/server/tests/snapshots/replay__series_season_detail.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "id": "[id]",
    "number": 1,
    "overview": null,
    "series_id": "s1",
    "title": "Season 1"
  },
  "status": 200
}
